--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
 </head>
 
 <body class="bg-success">
-    <div class="container bg-danger text-xl-center mt-1 mb-4 pb-5">
+    <div class="container bg-danger text-center mt-1 mb-4 pb-5">
         <h1 class="text-white">Mail e Dadi</h1>
         <div class="col-4 m-auto">
             <label for="mailel">Inserisci la tua mail</label>
             <input type="email" class="form-control" id="mailel" name="mailel">
         </div>
         <button class="btn btn-success mt-4" id="button">Invia</button>
+        <div id="matchel">
+
+        </div>
     </div>
 
+    
+   
 
  <script src="javascript/javascript.js"></script>   
 </body>
