--- a/index.html
+++ b/index.html
@@ -20,8 +20,19 @@
 
         </div>
     </div>
+    <div class="container bg-warning p-5 d-flex gap-5">
+       <button class="btn btn-info" id="dicebutton">Tira il tuo dado</button>
+       <div id="risultato">
 
-    
+       </div>
+       <div id="tuorisultato">
+
+       </div>
+       <div id="risultatopc">
+
+       </div>
+    </div>
+
    
 
  <script src="javascript/javascript.js"></script>   
